ingress/3-pay.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  selector:
    app: pay
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
